css/menuV4.css
* {
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
}

html {
  height: 100%;
}

body {
  font-family: "Lato", sans-serif;
  color: rgb(56, 56, 56);
  background-color: rgb(231, 231, 231);
}

h1 {
  font-size: 1.7rem;
  font-weight: 700;
}

h2 {
  font-size: 1.25rem;
  font-weight: 700;
}

h3 {
  font-size: 1.2rem;
  font-weight: 400;
}

/* Global Class */

.display-none {
  display: none;
}

.section-title {
  text-align: center;
  margin: 0.8rem 0px;
  width: 100%;
  height: auto;
}

.text-image-bottom {
  position: absolute;
  bottom: 25px;
  left: 0px;
}

.text-image-top {
  position: absolute;
  top: 8px;
  right: 0px;
}

.text-image-bottom span,
.text-image-top span {
  color: white;
  /* font: bold 0.6rem Helvetica, Sans-Serif; */
  font-size: 0.6em;
  letter-spacing: 0.3px;
  background: rgb(0, 0, 0); /* fallback color */
  background: rgba(0, 0, 0, 0.7);
  padding: 0.5rem;
}

/* Header Section*/

.navbar {
  height: auto;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: rgb(43, 43, 43);
  color: white;
  box-shadow: 0px 1px 5px black;
  z-index: 3;
  position: relative;
}

.navbar-title {
  font-size: 1.5rem;
  margin: 0px 1rem;
  padding: 0.5rem 0.3rem;
}

.navbar-links ul {
  display: flex;
  margin: 0px;
  padding: 0px;
}

.navbar-links li {
  list-style: none;
}

.navbar-links li a {
  text-decoration: none;
  color: white;
  display: block;
  padding: 1rem;
}

.navbar-links li:hover {
  background-color: #555;
  cursor: pointer;
}

/* Navbar burger button */

.burger-btn {
  position: absolute;
  top: 0.8rem;
  right: 1rem;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  width: 30px;
  height: 21px;
  background-color: Transparent;
  border: none;
  cursor: pointer;
  outline: none;
}

.burger-btn-line {
  width: 100%;
  height: 2px;
  background-color: white;
  border-radius: 10px;
}

/* Main Banner */

.banner {
  /* Use "linear-gradient" to add a darken background effect to the image

    /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/morale.png"); */

  /* background-image: url("../images/banner/morale.png"); */

  max-width: 768px;
  height: auto;
  width: 100%;
  position: relative;
  /* cursor: pointer; */

  /* background-position: center;

    background-repeat: no-repeat;

    background-size: cover; */
}

.banner-slides {
  display: none;
}

.fade {
  /* -webkit-animation: fade 1.5s; */
  animation: fadeIn 1.5s;
}

/* @-webkit-keyframes fade {

    from { opacity: .4; } 

    to { opacity: 1; }

  } */

@keyframes fadeIn {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

/* Lightbox */

#lightbox {
  z-index: 1000;
  top: 0;
  background-color: rgba(0, 0, 0, 0.8);
  width: 100%;
  height: 100%;
  position: fixed;
  display: none;
}

#lightbox.active {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#lightbox p {
  color: white;
  margin-left: 34%;
  margin-bottom: 0.5%;
  font-size: 1.7rem;
  cursor: pointer;
}

#lightbox img {
  max-width: 90%;
  max-height: 80%;
  padding: 4px;
  background-color: black;
  border: 2px solid white;
}

/* Menu */

.menu {
  position: relative;
  background-color: #f1f1f1;
  max-width: 768px;
  margin-top: -10px;
  padding: 2.1rem 0px;
  display: grid;
  gap: 10px;
}

.menu-links ul {
  display: flex;
  position: relative;
  justify-content: space-around;
  margin: 0px;
  padding: 0px;
}

.menu-links li {
  list-style: none;
  position: relative;
  display: block;
  padding: 1rem;
}

.menu-links li a {
  text-decoration: none;
  color: rgb(56, 56, 56);
}

.menu-links li:hover {
  /* background-color: rgb(187, 187, 187); */
  cursor: pointer;
}

.menu-links-appetizer {
  margin-left: 30px;
}

.menu-links-maincourse {
  text-align: center;
}

.menu-links-pastry {
  text-align: center;
}

.menu-links-drinks {
  margin-right: 50px;
}

.menu-links li:hover::after,
.menu-links-appetizer.active::after,
.menu-links-maincourse.active::after,
.menu-links-pastry.active::after,
.menu-links-drinks.active::after {
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 5px;
  width: 100%;
  border-radius: 1px;
  border-bottom: 3px solid rgba(56, 56, 56, 0.7);
  content: "";
}

.menu-links-appetizer.active,
.menu-links-maincourse.active,
.menu-links-pastry.active,
.menu-links-drinks.active {
  font-weight: 700;
  font-size: 20px;
}

/* .food-box = grid container for items in food category */
/* This is template for food box that contains pictures */

.food-box {
  display: grid;
  padding: 1rem 2rem;
  margin-bottom: -1.5rem;
  column-gap: 18px;
  width: 100%;
  min-height: 1vh;
  grid-template-areas:
    "name name price"
    "description description description"
    "line line line";
  grid-template-rows: 0.3fr 1fr;
  grid-template-columns: 0.3fr 1fr;
}

.without-description {
  margin-bottom: -4rem;
}

.sold-out {
  color: rgb(202, 202, 202);
}

.food-banner {
  display: flex;
  justify-content: center;
  margin-top: 10px;
  /* gap: 3px; */
  padding-left: 20px;
  padding-right: 20px;
  align-items: center;
  width: 100%;
  height: 100%;
  /* background-color: blue; */
}

.food-banner > div {
  display: inline-block;
  position: relative;
  width: 100%;
  height: 100%;
  /* overflow: hidden; */
  /* background-color: blueviolet; */
  margin-left: 10px;
  margin-right: 10px;
}

.food-banner > div > img {
  width: 100%;
}

.inactive {
  display: none;
}

/* .food-box > .food-banner > div {
    margin: 10px
} */

/* .food-box::after {
    content: "";
    margin-top: 20px;
    grid-area: line;
    border-bottom: .25px solid rgba(99, 99, 99, 0.3);
} */

.food-box.last::after {
  content: "";
  margin-top: 20px;
  grid-area: line;
  border-bottom: 0.25px solid rgba(99, 99, 99, 0);
}

.food-box > .menu-name {
  grid-area: name;
  padding-bottom: 10px;
}

.food-box > .menu-image {
  grid-area: image;
  max-width: 110px;
  max-height: 110px;
  display: grid;
  place-items: center;
}

.food-box > .menu-description {
  grid-area: description;
  font-weight: 300;
}

/* This is template for food box without images, just plain text */

/* div for food and drink categories */

.category-title {
  margin-top: 10px;
  padding-left: 30px;
  width: auto;
  background-color: rgba(223, 223, 223, 0.5);
}

/* .drink-box = grid container for items in drink category */

.drink-box {
  display: grid;
  grid-template-areas:
    "image image image"
    "category variantHot variantIce"
    "name priceHot priceIce ";
  gap: 10px;
  /* grid-template-rows: .3fr 1fr; */
  grid-template-columns: 2fr 0.3fr 0.4fr;
  width: 100%;
  margin-top: 30px;
}

.drink-box > .drink-banner {
  /* box-shadow: -10px 10px 6px rgb(192, 192, 192); */
  grid-area: image;
  text-align: center;
  overflow: hidden;
  margin-bottom: 15px;
  /* height: 512px; */
  width: 100%;
}

.drink-banner img {
  height: auto;
}

.drink-box > .drink-category {
  grid-area: category;
  padding-left: 2rem;
  width: 100%;
}

.drink-box > .drink-name {
  grid-area: name;
  padding-left: 2rem;
  width: 100%;
}

.drink-box > .drink-variant.hot {
  grid-area: variantHot;
  text-align: center;
}

.drink-box > .drink-variant.ice {
  grid-area: variantIce;
  text-align: center;
  padding-right: 2rem;
}

.drink-box ul {
  list-style: none;
}

.drink-box li {
  margin-bottom: 0.2rem;
}

.drink-box ul ul li {
  font-weight: 300;
  padding-left: 10px;
}

.menu-price {
  grid-area: price;
  padding-top: 1px;
}

.menu-price.hot {
  grid-area: priceHot;
  text-align: center;
}

.menu-price.ice {
  grid-area: priceIce;
  text-align: center;
  padding-right: 2rem;
}

/* Menu Categories */

.appetizer {
  position: relative;
  display: inherit;
}

.maincourse {
  position: relative;
  display: none;
}

.pastry {
  position: relative;
  display: none;
}

.drinks {
  position: relative;
  display: none;
}

/* Info */

.info {
  grid-area: info;
  text-align: center;
}

.info-title {
  font-weight: 700;
}

.info-1 {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  word-wrap: break-word;
}

.info-2 h2 {
  margin-bottom: -7px;
  line-height: 0px;
}

@media (max-width: 768px) {
  .burger-btn {
    display: flex;
  }

  .navbar-links {
    display: none;
    width: 100%;
  }

  .navbar {
    flex-direction: column;
    align-items: flex-start;
  }

  .navbar-links ul {
    flex-direction: column;
    width: 100%;
  }

  .navbar-links ul li {
    text-align: center;
  }

  .navbar-links ul li a {
    padding: 0.5rem 1rem;
  }

  .navbar-links.active {
    display: flex;
  }

  .buffer {
    margin-top: 40px;
  }
}

@media (min-width: 768px) {
  .container {
    width: auto;
    height: auto;
    display: grid;
    place-items: center;
  }

  .food-box {
    min-width: 768px;
  }

  .drink-box {
    width: 768px;
  }

  .drink-box > .drink-banner {
    height: 512px;
    overflow: hidden;
  }

  .buffer {
    margin-top: 0px;
  }

  /* .drink-banner img {
        height: 512px;
    } */
}

